assets/deployments/converter/converter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter
spec:
  selector:
    app: converter
  ports:
  - name: http
    protocol: TCP
    port: 8090
    targetPort: 8090
#  type: LoadBalancer
